2008-04-27  Jb Evain  <jbevain@novell.com>

	* MethodCanBeMadeStaticTest.cs: test that ensure that
	this rule doesn't apply on event callbacks.

2008-02-16  Sebastien Pouliot  <sebastien@ximian.com> 

	* DontCompareWithNaNTest.cs: Fix name change.
	* FloatComparisonRuleTest.cs: Fix test not to depend on compiler.

2008-02-15  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidConstructorsInStaticTypesTest.cs
	* BadRecursiveInvocationTest.cs
	* CallingEqualsWithNullArgTest.cs
	* DontCompareWithNaNTest.cs
	* FloatComparisonRuleTest.cs
	* MethodCanBeMadeStaticTest.cs
	* UseValueInPropertySetterTest.cs:
		Update unit tests wrt framework changes.

2008-01-29  Sebastien Pouliot  <sebastien@ximian.com>

	* FloatComparisonRuleTest.cs: Add test case where we compare with
	"this".
	* UseValueInPropertySetterTest.cs: Add test case where a "this []"
	property is used.

2008-01-12  Sebastien Pouliot  <sebastien@ximian.com>

	* DontCompareWithNaNTest.cs: New. Unit tests for NaN.
	* UseValueInPropertySetterTest.cs: Fix Empty test case since we 
	don't report them anymore (too many false positives).

2008-01-06  Sebastien Pouliot  <sebastien@ximian.com> 

	* BadRecursiveInvocationTest.cs: Add more complex test cases to hunt
	for false positives (detected while scanning corlib).
	* FloatComparisonRuleTest.cs: Duplicate test cases for Double. Add
	test cases for FP conversion and FP in arrays.
	* UseValueInPropertySetterTest.cs: Add test case for empty setter
	and for a call on the setter value.

2008-01-05  Sebastien Pouliot  <sebastien@ximian.com>

	* AvoidConstructorsInStaticTypesTest.cs: line endings
	* FloatComparisonRuleTest.cs: line endings
	* UseValueInPropertySetterTest.cs: line endings and new test cases
	for static properties
	* Test.Rules.Correctness.mdp: MonoDevelop removed the "./" prefix 
	before each file.

2007-12-16  Sebastien Pouliot  <sebastien@ximian.com>

	* UseValueInPropertySetterTest.cs: Add test cases where an exception