@@ -1,3 +1,12 @@
+2008-05-10  Andres G. Aragoneses <aaragoneses@novell.com> 
+
+	* UseValueInPropertySetterTest.cs,
+	  AvoidConstructorsInStaticTypesTest.cs, DontCompareWithNaNTest.cs,
+	  CallingEqualsWithNullArgTest.cs, BadRecursiveInvocationTest.cs,
+	  FloatComparisonRuleTest.cs, MethodCanBeMadeStaticTest.cs: Update
+	  (to fix build): somebody forgot to include the new namespace when
+	  moving TestRunner.
+
 2008-04-27  Jb Evain  <jbevain@novell.com>
 
 	* MethodCanBeMadeStaticTest.cs: test that ensure that
